--- a/Style Guide 3/css/main.css
+++ b/Style Guide 3/css/main.css
@@ -526,6 +526,8 @@ p{
 
 .product-image{
   /*border: 1px dotted #aaa;*/
+  padding-top:150px;
+
 }
 
 .product-image .bg{
